# sourcesfs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  bintray_descriptor.json
buildtools/: ubuntu.docker
buildtools/buildpy/: get-version-info.py  upload-bintray.py
buildtools/buildpy/pyart/: __init__.py  version_info.py
buildtools/buildpy/pyprelude/: __init__.py  file_system.py  process.py  temp_util.py  util.py
buildtools/buildpy/pysimplevcs/: __init__.py  git.py  git_util.py  hg.py
buildtools/buildpy/pysimplevcs/tests/: __init__.py
buildtools/cmake/: README.md  bintray.cmake  os.cmake  setup.cmake  sourcemapprefix.cmake  version.cmake
buildtools/cmake/components/: fuse.cmake
buildtools/docker/: Makefile  centos.docker  ubuntu.docker
docker/: Makefile  ubuntu.docker
prototype/: CMakeLists.txt  CacheProvider.cpp  CacheProvider.hpp  FuseHandler.hpp  FuseUtil.cpp  FuseUtil.hpp  GitProvider.cpp  GitProvider.hpp  MercurialProvider.cpp  MercurialProvider.hpp  P4Provider.cpp  P4Provider.hpp  Provider.hpp  ProviderConfig.cpp  ProviderConfig.hpp  ProviderType.cpp  ProviderType.hpp  README.md  UrlTemplate.cpp  filelist.cmake  gitprovider.cpp  prototype.cpp  prototype.hpp  sourcesfs.cpp  sourcesfs.h
prototype/res/: Info.plist
prototype/tests/: GitProviderTest.cpp  gitprovidertest.cpp
